force-app/main/default/objects/JourPassage__c/JourPassage__c.object-meta.xml
<CustomObject>
    <label>Jour de Passage</label>
    <nameField>
        <displayFormat>JP-{00000}</displayFormat>
        <label>Jour de Passage Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Jours de Passage</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>