force-app/main/default/objects/JourPassage__c/fields/AdresseAgence2__c.field-meta.xml
<CustomField>
    <fullName>AdresseAgence2__c</fullName>
    <label>Adresse Agence 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>