force-app/main/default/objects/JourPassage__c/fields/AdresseAgence3__c.field-meta.xml
<CustomField>
    <fullName>AdresseAgence3__c</fullName>
    <label>Adresse Agence 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>