force-app/main/default/objects/JourPassage__c/fields/AdresseAgence__c.field-meta.xml
<CustomField>
    <fullName>AdresseAgence__c</fullName>
    <label>Adresse Agence</label>
    <length>255</length>
    <type>Text</type>
</CustomField>