force-app/main/default/objects/JourPassage__c/fields/CodePE__c.field-meta.xml
<CustomField>
    <fullName>CodePE__c</fullName>
    <label>Code PE</label>
    <length>10</length>
    <type>Text</type>
</CustomField>