force-app/main/default/objects/JourPassage__c/fields/CodePostalAgence__c.field-meta.xml
<CustomField>
    <fullName>CodePostalAgence__c</fullName>
    <label>Code Postal Agence</label>
    <length>20</length>
    <type>Text</type>
</CustomField>