force-app/main/default/objects/JourPassage__c/fields/CodeUSC__c.field-meta.xml
<CustomField>
    <fullName>CodeUSC__c</fullName>
    <label>Code USC</label>
    <length>10</length>
    <type>Text</type>
</CustomField>