force-app/main/default/objects/JourPassage__c/fields/EmailAgence__c.field-meta.xml
<CustomField>
    <fullName>EmailAgence__c</fullName>
    <label>Email Agence</label>
    <type>Email</type>
</CustomField>