force-app/main/default/objects/JourPassage__c/fields/FaxAgence__c.field-meta.xml
<CustomField>
    <fullName>FaxAgence__c</fullName>
    <label>Fax Agence</label>
    <type>Phone</type>
</CustomField>