force-app/main/default/objects/JourPassage__c/fields/Mercredi__c.field-meta.xml
<CustomField>
    <fullName>Mercredi__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mercredi</label>
    <type>Checkbox</type>
</CustomField>