force-app/main/default/objects/JourPassage__c/fields/Reference__c.field-meta.xml
<CustomField>
    <fullName>Reference__c</fullName>
    <label>Référence</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>