force-app/main/default/objects/JourPassage__c/fields/TelephoneAgence__c.field-meta.xml
<CustomField>
    <fullName>TelephoneAgence__c</fullName>
    <label>Téléphone Agence</label>
    <type>Phone</type>
</CustomField>