force-app/main/default/objects/JourPassage__c/fields/USCPoleExpertise__c.field-meta.xml
<CustomField>
    <fullName>USCPoleExpertise__c</fullName>
    <label>USC/Pole Expertise</label>
    <length>20</length>
    <type>Text</type>
</CustomField>