force-app/main/default/objects/JourPassage__c/fields/VilleAgence__c.field-meta.xml
<CustomField>
    <fullName>VilleAgence__c</fullName>
    <label>Ville Agence</label>
    <length>80</length>
    <type>Text</type>
</CustomField>