force-app/main/default/objects/JourPassage__c/fields/VillePassage__c.field-meta.xml
<CustomField>
    <fullName>VillePassage__c</fullName>
    <label>Ville passage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>