force-app/main/default/objects/JourPassage__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Reference__c</columns>
    <columns>VillePassage__c</columns>
    <columns>Lundi__c</columns>
    <columns>Mardi__c</columns>
    <columns>Mercredi__c</columns>
    <columns>Jeudi__c</columns>
    <columns>Vendredi__c</columns>
    <columns>CodePE__c</columns>
    <columns>CodeUSC__c</columns>
    <columns>USCPoleExpertise__c</columns>
    <columns>AdresseAgence__c</columns>
    <columns>AdresseAgence2__c</columns>
    <columns>CodePostalAgence__c</columns>
    <columns>VilleAgence__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>